--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 authors = ["armytricks <dhjayalath@gmail.com>"]
 edition = "2018"
 
+[dependencies.sdl2]
+version = "0.32.2"
+default-features = false
+features = ["ttf"]
+
 [dependencies]
 glm = "0.2.3"
-sdl2 = "0.32.2"
